--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Correo: jilmarjoancy@gmail.com</h1>
+    <script src="app.js"></script>
 </body>
 </html>
